[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_objects/Layers/Withering/Objectives/Commutation/WireInput.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/sounds/source_machine/source_machine_sparks.ogg" type="AudioStream" id=2]
[ext_resource path="res://resources/models/layers/withering/commutation/source_machine/source_machine.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/models/layers/withering/commutation/source_machine/source_machine_phy_collision_shape.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/sounds/source_machine/source_machine_working.ogg" type="AudioStream" id=5]
[ext_resource path="res://scripts/Objectives/Commutation/SourceMachine.gd" type="Script" id=6]

[node name="SourceMachine" type="StaticBody"]
script = ExtResource( 6 )

[node name="Model" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.6, 0, 0, 0, 1.6, 0, 0, 0, 1.6, 0, 0, 0 )

[node name="WireInput" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0208865, -0.29134, -2.49677 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9742, -2.79912 )
light_energy = 0.5
shadow_enabled = true
omni_range = 20.0

[node name="source_machine_phy_collision_shape" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.6, 0, 0, 0, 1.6, 0, 0, 0, 1.6, 0, 0, -0.572273 )

[node name="SparksSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 25.0
autoplay = true
max_distance = 150.0
bus = "world"

[node name="WorkingSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 20.0
max_distance = 100.0
bus = "world"

[connection signal="wire_connected" from="WireInput" to="." method="_on_WireInput_wire_connected"]
